--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "website-generator",
   "title": "Website Generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple and clean website generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "website": "./index.js"
+    "gen": "./index.js"
   },
   "author": "Federico Vitale",
   "license": "MIT",
