--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "gen": "./index.js"
+    "gen": "./index.js",
   },
   "author": "Federico Vitale",
   "license": "MIT",
